BusOne/src/objects/Order_vod__c.object
<CustomObject>
    <description>The Order object holds information on order quantities of selected product(s) for a selected account or account group. Price, applicable discounts and relevant shipping information are also available</description>
    <fields>
        <fullName>Account_Group_vod__c</fullName>
        <description>If applicable, will hold the account group for this order.</description>
        <label>Account Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_vod__c</fullName>
        <description>store the Account&apos;s ID</description>
        <label>Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_vod__c</fullName>
        <description>to store the Account&apos;s name</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account against which the order is being placed.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status_vod__c</fullName>
        <description>Picklist to be used in SFDC Approval Processes populated through field updates.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved_vod</fullName>
                </value>
                <value>
                    <fullName>In_Progress_vod</fullName>
                </value>
                <value>
                    <fullName>Recalled_vod</fullName>
                </value>
                <value>
                    <fullName>Rejected_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assortment_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Assortment header for traceability purposes</description>
        <label>Assortment</label>
        <referenceTo>Assortment_vod__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Best_Discount_Rule_vod__c</fullName>
        <description>Shows and stores the pricing cluster that triggered Best Price discount at the Total Order level.</description>
        <label>Best Discount Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign_with_Contract_vod</fullName>
                </value>
                <value>
                    <fullName>Order_Campaign_vod</fullName>
                </value>
                <value>
                    <fullName>Contract_vod</fullName>
                </value>
                <value>
                    <fullName>Standard_vod</fullName>
                </value>
                <value>
                    <fullName>Combined_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_1_vod__c</fullName>
        <description>Line 1 of the billing address of the account placing the order.</description>
        <label>Billing Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2_vod__c</fullName>
        <description>Line 2 of the billing address of the account placing the order.</description>
        <label>Billing Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the address object.</description>
        <label>Billing Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Orders (Billing Address)</relationshipLabel>
        <relationshipName>Orders2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_City_vod__c</fullName>
        <description>City of the billing address of the account placing the order.</description>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_vod__c</fullName>
        <description>Contact person at the billing address.</description>
        <label>Billing Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country_vod__c</fullName>
        <description>Country of the billing address of the account placing the order.</description>
        <label>Billing Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code_4_vod__c</fullName>
        <description>4 digit extension of the postal code of the billing address.</description>
        <label>Billing Postal Code 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code_vod__c</fullName>
        <description>Postal code of the billing address of the account placing the order.</description>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_vod__c</fullName>
        <description>State of the billing address of the account placing the order.</description>
        <label>Billing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Call is a reference field to the Call record from which the Order record was initiated. This reference value will be removed if the Call record is deleted.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to select the contract to be associated to the Order.</description>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract_vod__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Sales_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTime_vod__c</fullName>
        <description>Date and time the order was submitted.</description>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_vod__c</fullName>
        <description>This saves the actual delivery date per order.</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Location_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for selecting a Delivery Location for the Order from the Account Partner object.</description>
        <label>Delivery Location</label>
        <referenceTo>Account_Partner_vod__c</referenceTo>
        <relationshipLabel>Orders (Delivery Location)</relationshipLabel>
        <relationshipName>Account_Partner_Delivery_Location_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Order_Warning_vod__c</fullName>
        <description>Stores Delivery Order warnings.</description>
        <label>Delivery Order Warning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Order_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, normal pricing logic is disabled. It is automatically set on all Delivery Orders.</description>
        <label>Delivery Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Rank_vod__c</fullName>
        <description>Sorting value that represents the delivery rank in line split scenarios. Automatically populated on Delivery Orders.</description>
        <label>Delivery Rank</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>It stores the disclaimer text persistently in order after signature.</description>
        <label>Disclaimer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>For internal use only.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Amount_vod__c</fullName>
        <description>The total list price for all line items that make up the order.</description>
        <label>List Amount</label>
        <summarizedField>Order_Line_vod__c.List_Amount_vod__c</summarizedField>
        <summaryForeignKey>Order_Line_vod__c.Order_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is locked for editing.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Order_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if the order has been split up</description>
        <label>Master Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Time the order was created on a mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Last time the order was modified on a mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Amount_vod__c</fullName>
        <description>The total net price after discounts for all line items that make up the order.</description>
        <label>Net Amount</label>
        <summarizedField>Order_Line_vod__c.Net_Amount_vod__c</summarizedField>
        <summaryForeignKey>Order_Line_vod__c.Order_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes_vod__c</fullName>
        <description>Any additional information pertinent to the order.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Campaign_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>List of campaigns available for reps. This lookup will be displayed as a picklist - values will be populated by customer and will be driven by Order_Record_Type_vod.</description>
        <label>Order Campaign</label>
        <referenceTo>Order_Campaign_vod__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date_vod__c</fullName>
        <description>Default value is current date.</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Discount_Rule_vod__c</fullName>
        <description>Stores the Order level discount, based on pricing rule „Discount_Rule_vod“ with no product association</description>
        <label>Order Discount Rule</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order_Discount_vod__c</fullName>
        <description>Also gets its value from an order level pricing rule, but can be changed by the user</description>
        <label>Order Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order_Free_Goods_vod__c</fullName>
        <description>Total quantity of free goods in an order.</description>
        <label>Order Free Goods</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_List_Amount_vod__c</fullName>
        <description>Order List Amount</description>
        <label>Order List Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Net_Amount_Rule_vod__c</fullName>
        <description>Shows and stores the Order Level sum of each line&apos;s Net Amount value as calculated from discount rules (user manual overrides are not included).</description>
        <label>Order Net Amount Rule</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Net_Amount_vod__c</fullName>
        <description>Order Net Amount</description>
        <label>Order Net Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Total_Discount_vod__c</fullName>
        <description>Order Total Discount</description>
        <label>Order Total Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order_Total_Profit_vod__c</fullName>
        <description>Calculates total order profit based on all order lines</description>
        <label>Order Total Profit</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Total_Quantity_vod__c</fullName>
        <description>Order Total Quantity</description>
        <label>Order Total Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a non-Admin User to make changes to a Submitted Order and/or Order Lines without requiring the User to unlock the Order. This is only intended for integration and/or custom pages/coding i.e. not through our Order User Interface.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Order_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For a delivery order, this field points to its master order.</description>
        <label>Parent Order</label>
        <referenceTo>Order_vod__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for selecting a Payer for the Order from the Account Partner object.</description>
        <label>Payer</label>
        <referenceTo>Account_Partner_vod__c</referenceTo>
        <relationshipLabel>Orders (Payer)</relationshipLabel>
        <relationshipName>Account_Partner_Payer_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Rule_vod__c</fullName>
        <description>Shows and stores the exact value the Payment Term rule has determined at the Order level, not editable by users.</description>
        <label>Payment Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_vod__c</fullName>
        <description>Field for allowing the rep to override Order Line Payment terms at the Order level.</description>
        <label>Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays Price Books.</description>
        <label>Price Book</label>
        <referenceTo>Account_Partner_vod__c</referenceTo>
        <relationshipLabel>Orders (Price Book)</relationshipLabel>
        <relationshipName>Orders_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Email_vod__c</fullName>
        <description>Email address used when sending an Approved Email Receipt</description>
        <label>Receipt Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores if a receipt has been requested in signature screen</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_1_vod__c</fullName>
        <description>Line 1 of the shipping address of the account placing the order.</description>
        <label>Ship Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_2_vod__c</fullName>
        <description>Line 2 of the shipping address of the account placing the order.</description>
        <label>Ship Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City_vod__c</fullName>
        <description>City of the shipping address of the account placing the order.</description>
        <label>Ship City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Country_vod__c</fullName>
        <description>Country of the shipping address of the account placing the order.</description>
        <label>Ship Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Postal_Code_4_vod__c</fullName>
        <description>4 digit extension of the postal code of the shipping address.</description>
        <label>Ship Postal Code 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Postal_Code_vod__c</fullName>
        <description>Postal code of the shipping address of the account placing the order.</description>
        <label>Ship Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State_vod__c</fullName>
        <description>State of the shipping address of the account placing the order.</description>
        <label>Ship State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Text_vod__c</fullName>
        <description>A textual representation of the different address components.</description>
        <formula>Ship_Address_Line_1_vod__c &amp; 
IF(LEN(Ship_Address_Line_2_vod__c) &gt; 0, &quot;, &quot; &amp; Ship_Address_Line_2_vod__c, &quot;&quot;) 
&amp; IF(LEN(Ship_City_vod__c) &gt; 0, &quot;, &quot; &amp; Ship_City_vod__c, &quot;&quot;) 
&amp; IF(LEN(TEXT(Ship_State_vod__c)) &gt; 0, &quot;, &quot; &amp; TEXT(Ship_State_vod__c),&quot;&quot;)
&amp; IF(LEN(Ship_Postal_Code_vod__c) &gt; 0, &quot; &quot; &amp; Ship_Postal_Code_vod__c, &quot;&quot;) 
&amp; IF(LEN(Ship_Postal_Code_4_vod__c) &gt; 0, &quot;-&quot; &amp; Ship_Postal_Code_4_vod__c, &quot;&quot;) 
&amp; IF(LEN(Ship_Country_vod__c) &gt; 0, &quot;, &quot; &amp; Ship_Country_vod__c, &quot;&quot;)</formula>
        <label>Ship To Address Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Address object.</description>
        <label>Ship To Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>Stores when the signature has been captured</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Stores the captured signature</description>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the order. Customers can add values to this picklist.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending_Approval_vod</fullName>
                </value>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
                <value>
                    <fullName>Submitted_vod</fullName>
                </value>
                <value>
                    <fullName>Voided_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Discount_vod__c</fullName>
        <description>Total percentage discount given.</description>
        <formula>IF(List_Amount_vod__c&gt;0, (List_Amount_vod__c - Net_Amount_vod__c)/List_Amount_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Warning_vod__c</fullName>
        <description>Any warnings at the Order Level, generated by Order Level Rules (Order Campaign)</description>
        <label>Warning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Account_Partner_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for selecting a Wholesaler for the Order from the Account Partner object.</description>
        <label>Wholesaler Partner</label>
        <referenceTo>Account_Partner_vod__c</referenceTo>
        <relationshipLabel>Orders (Account Partner)</relationshipLabel>
        <relationshipName>Account_Payer_Wholesaler_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Priority_vod__c</fullName>
        <description>Helper field to store the list and priority of wholesalers in an Order. Each wholesaler and priority must be separated by double semi-colon and ordered in priority from left to right</description>
        <label>Wholesaler Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lists the wholesalers that are affiliated to the account against which a transfer order is being placed.</description>
        <inlineHelpText>The wholesaler picklist is populated by accounts of type Wholesaler that are affiliated to the account that is placing the order.</inlineHelpText>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Wholesalers)</relationshipLabel>
        <relationshipName>Wholesalers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zvod_Delivery_Address_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If placed on Order page layout and a zvod_Delivery_Date is present, allows for entering a Delivery Address for this Date.</description>
        <label>Ship To Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Delivery_Date_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If placed on Order page layout, then the Delivery Date Splitting mode will be active.</description>
        <label>Delivery Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Delivery_Free_Goods_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field user to display Delivery Free Goods on the Order header.</description>
        <label>zvod_Delivery_Free_Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Delivery_List_Amount_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to display Delivery List Amount on the Order header.</description>
        <label>zvod Delivery List Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Delivery_Net_Amount_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to display Delivery Net Amount on the Order header.</description>
        <label>zvod Delivery Net Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Delivery_Total_Quantity_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to display Delivery Total Order on the Order header.</description>
        <label>zvod Delivery Total Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Delivery_Wholesaler_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field to enable line split per wholesaler Order header and Order lines. Pulls wholesaler information from the Account Partner object.</description>
        <label>zvod Delivery Wholesaler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Free_Good_Splitting_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>marker field to allow users to manually allocate Free Goods per Delivery during order splitting</description>
        <label>zvod Free Good Splitting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Payer_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If placed on the Order page layout together with Payer_vod field, user can enter a Payer for that delivery order.</description>
        <label>Payer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Recipients_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>enables on Order Header and Order Lines the selection of multiple recipients. Not compatible with other Order Header zvods, and must be placed in a dedicated page section</description>
        <label>zvod Recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Wholesaler_Priority_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field to define the priority ranking of each wholesaler on the Order Header</description>
        <label>zvod Wholesaler Priority</label>
        <type>Checkbox</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OR{00000000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>Direct_vod</fullName>
        <active>true</active>
        <description>for orders shipped directly to the customer</description>
        <label>Direct_vod</label>
    </recordTypes>
</CustomObject>